--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,45 @@
-oauthlib==3.2.0
-pandas==1.1.5
-pip==21.3.1
-protobuf==3.19.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+cloudpickle==2.2.0
+contourpy==1.0.5
+cycler==0.11.0
+fonttools==4.37.3
+gym==0.10.5
+gym-notices==0.0.8
+idna==3.4
+imageio==2.16.1
+importlib-metadata==4.12.0
+joblib==1.1.0
+kiwisolver==1.4.4
+matplotlib==3.6.0
+munkres==1.1.4
+numpy==1.23.3
+opencv-python==4.5.5.64
+packaging==21.3
+pandas==1.5.0
+patsy==0.5.2
+Pillow==9.2.0
+pip==22.2.2
+pygame==2.1.3.dev5
+pyglet==1.5.27
 pyparsing==3.0.9
-pytz==2022.1
-rsa==4.9
-scikit-learn==0.24.2
-scipy==1.5.4
-seaborn==0.11.2
-setuptools==40.6.2
+python-dateutil==2.8.2
+pytz==2022.2.1
+PyWavelets==1.3.0
+requests==2.28.1
+scikit-image==0.19.2
+scipy==1.9.1
+seaborn==0.12.0
+setuptools==63.4.1
 six==1.16.0
 sklearn==0.0
-threadpoolctl==3.1.0
-uritemplate==4.1.1
-urllib3==1.26.11
+statsmodels==0.13.2
+tifffile==2022.3.25
+torch==1.12.1
+torchvision==0.12.0
+typing_extensions==4.3.0
+unicodedata2==14.0.0
+urllib3==1.26.12
+wheel==0.37.1
+zipp==3.8.1
